# tonex-backend

./: .gitignore  alembic.ini  app.py  bot.py  gunicorn_conf.py  pyproject.toml
migrations/: env.py
migrations/versions/: ed46847911ac_.py
secret/: admin_highload_mnemo.json  admin_mnemo.json
src/app/backend/: __init__.py  _api.py
src/app/backend/jetton/: __init__.py  _jetton.py  _schemas.py
src/app/backend/users/: __init__.py  _schemas.py  _users.py
src/bot/handlers/: __init__.py  _start.py
src/bot/keyboards/: __init__.py  _start_kb.py
src/common/: __init__.py  _bot_init.py  _config.py  _constants.py  _logger.py  _redis.py  _ton_api.py
src/database/: __init__.py  _database.py  _engine.py  _models.py
src/repos/users/: __init__.py  _users.py
src/services/contracts/: __init__.py  _claim_contract.py  _contracts.py  _models.py  _provider.py  _user_contract.py  _wallet.py
src/services/tnx/: __init__.py  _gecko.py  _tnx.py
src/services/users/: __init__.py  _models.py  _users.py
src/utils/: algs.py
