[tool.poetry]
name = "tonex-claim"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
sqlalchemy = "^2.0.29"
fastapi = "^0.110.1"
loguru = "^0.7.2"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"
pytonapi = "^0.2.3"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
pytoniq = "^0.1.35"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
